# rag-web-app

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
api/app/: main.py
api/app/core/: config.py  database.py  exceptions.py  logging.py  models.py  repositories.py
api/app/modules/admin/: views.py
api/app/modules/auth/: exceptions.py  middleware.py  models.py  repository.py  schema.py  service.py  state_manager.py  views.py
api/app/modules/auth/services/: auth_service.py  state_manager.py
api/app/modules/files/: exceptions.py  models.py  repository.py  schema.py  service.py  views.py
api/app/modules/rag/: document_chunk_repository.py  image_repository.py  managers.py  models.py  repository.py  schema.py  service.py  views.py
api/app/modules/rag/repositories/: document_chunk.py  image.py  qa.py
api/app/modules/rag/services/: __init__.py  audio_processing_service.py  base_content_manager.py  content_manager.py  document_service.py  docx_content_manager.py  embeddings_service.py  openai_service.py  pdf_content_manager.py  vector_store_manager.py
api/app/modules/users/: models.py
api/migrations/: env.py
api/migrations/versions/: 4152eabfd126_add_images_table_and_remove_images_used.py  428a7fde0df1_initiate_users.py  53e4fe25775_add_document_chunks_pgvector.py  637967eb846a_add_qa_tables_v2.py  98a2b04a6518_add_files.py  e1e3bcdd3e52_add_cascade_delete_to_answers.py  f4ee5d9f4847_.py  f95c7aa11762_add_qa_tables.py
api/tests/integration/: conftest.py  test_auth.py  test_files.py  test_rag.py
api/tests/unit/: conftest.py
api/tests/unit/core/: test_config.py  test_database.py  test_logging.py  test_repositories.py
api/tests/unit/modules/auth/: test_middleware.py  test_repository.py  test_services_auth_service.py
api/tests/unit/modules/files/: test_repository.py  test_service.py
api/tests/unit/modules/rag/: test_repositories_document_chunk.py  test_repositories_image.py  test_repositories_qa.py  test_services_audio_processing_service.py  test_services_document_service.py  test_services_docx_content_manager.py  test_services_embeddings_service.py  test_services_openai_service.py  test_services_pdf_content_manager.py  test_services_vector_store_manager.py
client/: README.md  package-lock.json  package.json  tsconfig.app.json
client/src/: App.tsx
client/src/components/: AdminPanel.tsx  FileList.tsx  FileUpload.tsx  LoginButton.tsx  LogoutButton.tsx  ProtectedRoute.tsx  QuestionHistory.tsx  RAGChat.tsx  RAGStats.tsx
client/src/contexts/: AuthContext.tsx
client/src/services/: authService.ts  fileService.ts  ragService.ts  userService.ts
client/src/utils/: api.ts
