[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.120.0",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.27",
    "workos>=5.31.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn==0.35.0",
    "unstructured[all-docs]>=0.18.15",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0,<2.0.0",
    "whisper>=1.1.10",
    "pydub>=0.25.1",
    "librosa>=0.10.1",
]

[tool.setuptools.packages.find]
exclude = ["logs*", "migrations*"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "ruff>=0.14.2",
    "types-aiofiles>=25.1.0.20251011",
]

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = ["migrations"]
lint.select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "ASYNC", # flake8-async
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "BLE", # flake8-blind-except
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "FIX", # flake8 - fix me
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN", # typing
]
lint.ignore = [
    "ISC001", # Disabled to avoid unexpected behaviour on ruff format .
    "B904",
    "BLE001",
    "ANN002",
    "ANN003",
    "B024"
]
format.quote-style = "double"
format.indent-style = "space"
format.skip-magic-trailing-comma = false
format.line-ending = "auto"
